--- a/client/index.html
+++ b/client/index.html
@@ -17,11 +17,91 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 
+        <link rel="icon" type="image/png" href="./assets/pesto.png">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Pesto ToDo</title>
+
+    <style>
+        .row{
+            padding-top: 5%;
+        }
+    </style>
+
+
+    <script>
+
+        function btnclick(val){
+
+            if(val === 'todo'){
+                let element = document.getElementById('btn-progress');
+                element.innerHTML = 'Todo'
+            }
+            else if(val === 'inprog'){
+                let element = document.getElementById('btn-progress');
+                element.innerHTML = 'In-Progress'
+            }
+            else if(val === 'compl'){
+                let element = document.getElementById('btn-progress');
+                element.innerHTML = 'Completed'
+            }
+            
+        }
+
+
+        function additem(){
+            let key = 1;
+
+        }
+
+        async function simple() {
+            const response = await fetch("http://localhost:3000/allItems");
+            const data = await response.json();
+            console.log(data);
+            let element = document.getElementById('todolist');
+            for(let i=0;i<data.length;i++){
+                let simple_li = `<li class="list-group-item">${data[i].value}</li>`;
+                let innerHtmlString = document.createElement('li');
+                innerHtmlString.innerHTML = simple_li;
+                element.appendChild(innerHtmlString)
+            }
+            element.style.listStyleType='none';
+
+        }
+
+    </script>
+
 </head>
-<body>
-<h1>Hello world</h1>
+<body onload="simple()">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+
+            </div>
+            <div class="col-4">
+                <button type="button" class="btn btn-primary" onclick="additem()">Add</button>
+                <div class="input-group mt-3 mb-3">
+                    <button type="button" class="btn btn-primary dropdown-toggle" id="btn-progress"
+                    data-bs-toggle="dropdown">
+                      Progress
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li onclick="btnclick('todo')"><a class="dropdown-item">Todo</a></li>
+                      <li onclick="btnclick('inprog')"><a class="dropdown-item">In Progress</a></li>
+                      <li onclick="btnclick('compl')"><a class="dropdown-item">Completed</a></li>
+                    </ul>
+                    <input type="text" class="form-control" placeholder="Todo goes here...!">
+                  </div>
+
+                  <ul class="list-group" id="todolist">
+                  </ul>
+            </div>
+            <div class="col-4">
+
+            </div>
+        </div>
+      </div>
+
 </body>
 </html>
