--- a/client/index.html
+++ b/client/index.html
@@ -137,6 +137,19 @@
             simple();
         }
 
+       async function updateText(index,value,status){
+            let newValue = document.getElementById("textinp-"+index).value;
+            console.log("Inside update text",index,value,status,newValue);
+            const resp = await postData("http://localhost:3000/createEntity",{
+                key:index,
+                value:newValue,
+                progress:status
+            });
+            console.log(resp);
+            document.getElementById('todolist').innerHTML="";
+            simple();
+        }
+
         function callHover() { }
 
         async function simple() {
@@ -179,7 +192,7 @@
                         pret(${i},'compl')
                       ""><a class="dropdown-item">Completed</a></li>
                     </ul>
-                    <input type="text" value="${listOfInps[0]}" class="form-control" placeholder="Todo goes here...!">
+                    <input id="textinp-${i}" type="text" onchange="updateText(${i},'${listOfInps[0]}','${listOfInps[1]}')" value="${listOfInps[0]}" class="form-control" placeholder="Todo goes here...!">
                   </div>`;
                 let innerHtmlString = document.createElement('div');
                 innerHtmlString.innerHTML = simple_li;
